<resources>
    <string name="app_name">Community Calendar</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="events">Events</string>
    <string name="saved">Saved</string>
    <string name="profile">Profile</string>
    <string name="search_hint">Search</string>
    <string name="login">Log In</string>
    <string name="com_auth0_client_id">@string/client_id</string>
    <string name="com_auth0_domain">@string/domain</string>
    <string name="audience">https://community-calendar.auth0.com/api/v2/</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="this_weekend">This weekend</string>
    <string name="all_upcoming">All upcoming</string>
    <string name="see_all">See all</string>
    <string name="featured">Featured</string>
    <string name="nearby">Nearby</string>
    <string name="recent_searches">RECENT SEARCHES</string>
    <string name="filters">Filters</string>
    <string name="filter_text_view_header">Filters</string>
    <string name="filter_text_view_title">Filters</string>
    <string name="filter_text_view_location">Location</string>
    <string name="filter_text_view_zip_code">Zip code</string>
    <string name="filter_edit_text_zip_code_hint">Zip code</string>
    <string name="filter_text_view_date">Date</string>
    <string name="filter_text_view_tags">Tags</string>
    <string name="filter_search_view_hint">Search for tags</string>
    <string name="filter_date_hint">Date</string>
    <string name="filter_location_hint">Location</string>
    <string name="filter_text_view_suggested_tags">Suggested Tags</string>
    <string name="filter_button_apply">Apply</string>
    <string name="go_back">Go back</string>
    <string name="results">Results</string>
    <string name="searched">Searched</string>
    <string name="cancel">Cancel</string>
    <string name="view">View</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget mi proin sed libero enim sed faucibus turpis in. Urna et pharetra massa ultricies mi quis. Accumsan tortor posuere ac ut consequat semper viverra nam. Vestibulum lorem sed risus ultricies tristique nulla aliquet. ut consequat semper viverra nam. Vestibulum lorem sed risus ultricies tristique nulla aliquet. Urna et pharetra massa ultricies mi quis. Accumsan tortor posuere ac ut consequat semper viverra nam. Vestibulum lorem sed risus ultricies tristique nulla aliquet. ut consequat semper viverra nam. Vestibulum lorem sed risus ultricies tristique nulla aliquet. ut consequat semper viverra nam........</string>
    <string name="event_details">Event Details</string>
    <string name="free">Free</string>
    <string name="ticket_type">Ticket Type:</string>
    <string name="this_address">This Address</string>
    <string name="time">Time:</string>
    <string name="cici">Cici</string>
    <string name="hosted_by">Hosted by</string>
    <string name="the_date">The Date</string>
    <string name="hi_there">Hi there</string>
    <string name="read_more">Read more</string>
    <string name="attend">Attend</string>
    <string name="unattend">Unattend</string>
    <string name="follow_nhost">Follow Host</string>
    <string name="open_in_maps">Open in maps</string>
    <string name="save_in_calendar">Save in Calendar</string>
    <string name="read_less">Read less</string>
    <string name="mission_district">MISSION DISTRICT</string>
    <string name="event_1">Event 1</string>
    <string name="_6_00pm_10_00pm">6:00pm - 10:00pm</string>
    <string name="december_20_friday">DECEMBER 20, FRIDAY</string>
    <string name="tech_talk">Tech Talk</string>
</resources>
