...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.EventDetailsFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fadeScrollbars="false"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scrollview_constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/pb_details"
                android:layout_width="match_parent"
...
                android:layout_marginEnd="16dp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:text="@string/read_more"
                android:textAllCaps="false"
                android:textSize="8sp"
                app:layout_constraintBottom_toTopOf="@+id/btn_attend"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_event_details" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_attend"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
...
                android:textAllCaps="false"
                android:textColor="#21242C"
                app:layout_constraintTop_toBottomOf="@+id/btn_read_more"
                app:strokeColor="#FF6768" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_map"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="#21242C"
...
