<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@id/home"
        android:icon="@drawable/home_icon"
        android:title="@string/home" />

    <item
        android:id="@+id/notification_icon"
        android:icon="@drawable/notification_icon"
        android:title="@string/notifications" />

    <item
        android:id="@+id/event_icon"
        android:icon="@drawable/events_icon"
        android:title="@string/events" />

    <item
        android:id="@+id/saved_icon"
        android:icon="@drawable/saved_icon"
        android:title="@string/saved" />

    <item
        android:id="@id/loginFragment"
        android:icon="@drawable/profile_icon"
        android:title="@string/login" />
</menu>